--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Database a04",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node server.js --debug --port=5000",
     "start": "node server.js"
   },
   "repository": {
